--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,7 +20,7 @@ body {
 .wrapper {
   max-width: 2560px;
   margin: 0 auto;
-  min-width: 100%;
+  width: 100%;
   overflow: hidden;
 }
 
@@ -67,6 +67,7 @@ body {
     align-items: center;
     flex-wrap: wrap;
     padding-top: 72px;
+    padding-left: 50px;
 
     &-img {
       position: absolute;
@@ -88,6 +89,7 @@ body {
         color: #383334;
         font-size: 22px;
         font-weight: 900;
+        margin-left: 20px;
       }
     }
   }
@@ -150,12 +152,12 @@ body {
       text-align: center;
       background: $orange-color;
       z-index: 2;
-      top: 353px;
+      top: 345px;
       left: 149px;
       padding: 0 10px;
     }
     .block__img::after {
-      top: 484px;
+      top: 476px;
       left: 142px;
       background: $green-color;
     }
@@ -248,6 +250,12 @@ body {
             font-size: 20px;
             font-weight: 400;
             line-height: 24px;
+
+            &:hover {
+              .text-strong {
+                text-decoration: underline rgba($green-color, 0.8);
+              }
+            }
             .text-strong {
               font-weight: 500;
               color: #000;
@@ -309,7 +317,7 @@ body {
         border-right: 7px solid $green-color;
         border-bottom: 7px solid $green-color;
         border-radius: 7px;
-        background: rgba($secondary-color, 0.95);
+        background: #e6eff8;
         top: -7px;
         text-align: center;
 
@@ -403,11 +411,24 @@ body {
         &-name {
           background: #eef2f7 url(../img/header/input-man-icon.png) no-repeat
             center left 21px;
+          border: 2px solid #eef2f7;
+
+          &:active,
+          &:focus {
+            border: 2px solid $green-color;
+            @include ease;
+          }
         }
 
         &-tel {
           background: #eef2f7 url(../img/header/input-phone-icon.png) no-repeat
             center left 21px;
+          border: 2px solid #eef2f7;
+          &:active,
+          &:focus {
+            border: 2px solid $green-color;
+            @include ease;
+          }
         }
       }
 
@@ -417,7 +438,7 @@ body {
         height: 70px;
         box-shadow: inset 0 2px 7px rgba(0, 0, 0, 0.04);
         border-radius: 32px;
-        border: none;
+        // border: none;
       }
 
       .button {
@@ -598,6 +619,7 @@ footer {
     &-img {
       margin-right: 19px;
       margin-bottom: 54px;
+      width: 188px;
     }
 
     &-text {
@@ -842,6 +864,12 @@ footer {
     position: relative;
     margin-bottom: 64+25px;
 
+    &:hover {
+      span .text-bold {
+        text-decoration: underline $orange-color;
+      }
+    }
+
     &-text {
       font-size: 21px;
       font-weight: 400;
@@ -1033,7 +1061,7 @@ footer {
         background: #fff url(../img/main/cream-pic.png) no-repeat center center;
       }
       &-second::after {
-        top: -80px;
+        top: -77px;
         background: #fff url(../img/main/natural-methods-pic.png) no-repeat
           center center;
       }
@@ -1109,6 +1137,12 @@ footer {
       margin-bottom: 75px;
       .colored {
         color: #fa4f01;
+      }
+
+      &:hover {
+        .colored {
+          text-decoration: underline $green-color;
+        }
       }
     }
   }
