--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -1,6 +1,6 @@
 /* Variables start */
 
-$primary-color: #e2e2e2 !default;
+$primary-color: #fff !default;
 $secondary-color: #ecf4fb;
 $green-color: #a7c93d;
 $orange-color: #ff6b00;
