--- a/src/css/main.css
+++ b/src/css/main.css
@@ -522,10 +522,15 @@ html {
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #e2e2e2; }
+  background-color: #fff; }
+
+.shadow {
+  max-width: 2420px;
+  margin: auto;
+  -webkit-box-shadow: 0px 1px 40px rgba(0, 0, 0, 0.5);
+          box-shadow: 0px 1px 40px rgba(0, 0, 0, 0.5); }
 
 .wrapper {
-  max-width: 2560px;
   margin: 0 auto;
   width: 100%;
   overflow: hidden; }
