--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,8 +17,13 @@ body {
   background-color: $primary-color;
 }
 
+.shadow {
+  max-width: 2420px;
+  margin: auto;
+  box-shadow: 0px 1px 40px rgba(0, 0, 0, 0.5);
+}
+
 .wrapper {
-  max-width: 2560px;
   margin: 0 auto;
   width: 100%;
   overflow: hidden;
