--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,36 @@ html {
 body {
   font-family: 'Roboto', sans-serif;
   background-color: $primary-color;
+
+  &::-webkit-scrollbar {
+    width: 25px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: $secondary-color;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: $green-color;
+    @include ease;
+    border-radius: 15px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: rgba($green-color, 0.8);
+    border-radius: 15px;
+  }
+
+  &::-webkit-scrollbar-button:single-button {
+  }
+  /* Up */
+  &::-webkit-scrollbar-button:single-button:vertical:decrement,
+  &::-webkit-scrollbar-button:single-button:vertical:increment {
+    width: 100%;
+    height: 30px;
+
+    background: $secondary-color url(../img/header/single-small-icon.png)
+      no-repeat center center;
+  }
 }
 
 .shadow {
@@ -451,6 +481,7 @@ body {
         border-radius: 32px;
         &:hover,
         &:focus {
+          cursor: pointer;
           color: red;
           box-shadow: 0 0 10px $green-color;
           @include ease;
