--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -731,6 +731,7 @@ footer {
   &-statistics {
     padding: 47px 89px 41px 92px;
     border: 3px solid #f4d3bb;
+    border-radius: 10px;
     position: relative;
     &-text {
       font-size: 22px;
@@ -800,7 +801,7 @@ footer {
       margin-bottom: 60px;
       box-shadow: 0 0 15px rgba(37, 83, 129, 0.08);
       background-color: #fff;
-      padding: 70px 42px 61px 42px;
+      padding: 70px 18px 42px;
       text-align: center;
       position: relative;
       border-radius: 10px;
@@ -892,6 +893,7 @@ footer {
   &-statistics {
     padding: 34px 94px 27px 81px;
     border: 3px solid #f4d3bb;
+    border-radius: 10px;
     position: relative;
     margin-bottom: 64+25px;
 
@@ -1010,7 +1012,7 @@ footer {
       border: 4px solid $lite-red-color;
       border-radius: 10px;
       text-align: center;
-      padding: 85px 31px 36px 31px;
+      padding: 85px 20px 31px;
       margin-top: 35px;
       margin-bottom: 32px;
 
@@ -1106,6 +1108,8 @@ footer {
     padding: 4px;
     background: linear-gradient(to right, $lite-red-color, #62bd1f);
     border-radius: 10px;
+    width: 868px;
+    margin: auto;
     .main__why-meaning {
       padding: 33px 30px 31px 25px;
       background-color: #fff;
@@ -1117,6 +1121,12 @@ footer {
         line-height: 26.52px;
         .colored {
           color: $lite-red-color;
+        }
+
+        &:hover {
+          .colored {
+            text-decoration: underline $green-color;
+          }
         }
       }
     }
