--- a/src/css/main.css
+++ b/src/css/main.css
@@ -542,6 +542,7 @@ body {
     background: #ecf4fb url(../img/header/single-small-icon.png) no-repeat center center; }
 
 .shadow {
+  position: relative;
   max-width: 2420px;
   margin: auto;
   -webkit-box-shadow: 0px 1px 40px rgba(0, 0, 0, 0.5);
@@ -566,6 +567,9 @@ body {
 .hide {
   opacity: 0; }
 
+.display-none {
+  display: none; }
+
 /* HEADER start*/
 .header {
   left: 100px;
@@ -586,6 +590,83 @@ body {
             flex-wrap: wrap;
     max-width: 1170px;
     margin: auto; }
+  .header .container__modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 10; }
+    .header .container__modal .modal {
+      width: 700px;
+      height: 250px;
+      margin: 10% auto;
+      background: floralwhite;
+      border: 4px solid #a7c93d;
+      border-radius: 10px;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      position: relative;
+      -webkit-box-shadow: 0 0 15px #fff;
+              box-shadow: 0 0 15px #fff; }
+      .header .container__modal .modal::before {
+        content: '';
+        position: absolute;
+        top: 20px;
+        width: 100%;
+        height: 5px;
+        border-top: 5px dotted #ff6b00; }
+      .header .container__modal .modal__title-lg {
+        font-size: 36px;
+        margin-top: 20px;
+        margin-bottom: 20px; }
+      .header .container__modal .modal__title-sm {
+        font-size: 20px;
+        margin-bottom: 40px; }
+      .header .container__modal .modal__close-button {
+        position: absolute;
+        right: 10px;
+        top: 35px;
+        cursor: pointer; }
+        .header .container__modal .modal__close-button:hover {
+          font-size: 1.1em; }
+      .header .container__modal .modal__confirm-button {
+        width: 200px;
+        height: 50px;
+        background: #ff6b00;
+        border-radius: 15px;
+        text-align: center;
+        font-size: 34px;
+        line-height: 46px;
+        color: #fff;
+        -webkit-box-shadow: 0 0 5px black;
+                box-shadow: 0 0 5px black; }
+        .header .container__modal .modal__confirm-button:hover, .header .container__modal .modal__confirm-button:focus {
+          background: #a7c93d;
+          -webkit-transition: ease all 0.5s;
+          -o-transition: ease all 0.5s;
+          transition: ease all 0.5s;
+          -webkit-box-shadow: 0 2px 10px black;
+                  box-shadow: 0 2px 10px black;
+          cursor: pointer; }
+        .header .container__modal .modal__confirm-button:active {
+          color: #ff6b00; }
   .header__info {
     position: relative;
     display: -webkit-box;
@@ -907,6 +988,12 @@ body {
           font-weight: 400;
           line-height: 24px; }
         .header__content .form__price .new-price-lg {
+          -webkit-animation-duration: 3s;
+                  animation-duration: 3s;
+          -webkit-animation-delay: 3s;
+                  animation-delay: 3s;
+          -webkit-animation-iteration-count: infinite;
+                  animation-iteration-count: infinite;
           color: #000000;
           font-size: 34px;
           font-weight: 900;
@@ -1733,6 +1820,10 @@ footer {
     z-index: 0; }
   .header {
     left: 0; }
+    .header .container__modal .modal {
+      width: 95vw;
+      height: 320px;
+      text-align: center; }
     .header__info {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
@@ -1946,6 +2037,8 @@ footer {
     top: 415px;
     left: 0px;
     width: auto; }
+  .header .container__modal .modal {
+    width: 70vw; }
   .header__info-img img {
     width: auto;
     height: 500px; }
