--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -43,6 +43,7 @@ body {
 }
 
 .shadow {
+  position: relative;
   max-width: 2420px;
   margin: auto;
   box-shadow: 0px 1px 40px rgba(0, 0, 0, 0.5);
@@ -75,6 +76,10 @@ body {
   opacity: 0;
 }
 
+.display-none {
+  display: none;
+}
+
 /* HEADER start*/
 .header {
   left: 100px;
@@ -87,6 +92,90 @@ body {
     flex-wrap: wrap;
     max-width: 1170px;
     margin: auto;
+  }
+
+  .container__modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(black, 0.7);
+    z-index: 10;
+
+    .modal {
+      width: 700px;
+      height: 250px;
+      margin: 10% auto;
+      background: floralwhite;
+      border: 4px solid $green-color;
+      border-radius: 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      box-shadow: 0 0 15px $primary-color;
+
+      &::before {
+        content: '';
+        position: absolute;
+        top: 20px;
+        width: 100%;
+        height: 5px;
+        border-top: 5px dotted $orange-color;
+      }
+
+      &__title {
+        // width: 100%;
+        &-lg {
+          font-size: 36px;
+          margin-top: 20px;
+          margin-bottom: 20px;
+        }
+
+        &-sm {
+          font-size: 20px;
+          margin-bottom: 40px;
+        }
+      }
+
+      &__close-button {
+        position: absolute;
+        right: 10px;
+        top: 35px;
+
+        cursor: pointer;
+
+        &:hover {
+          font-size: 1.1em;
+        }
+      }
+
+      &__confirm-button {
+        width: 200px;
+        height: 50px;
+        background: $orange-color;
+        border-radius: 15px;
+        text-align: center;
+        font-size: 34px;
+        line-height: 46px;
+        color: $primary-color;
+        box-shadow: 0 0 5px black;
+
+        &:hover,
+        &:focus {
+          background: $green-color;
+          @include ease;
+          box-shadow: 0 2px 10px black;
+          cursor: pointer;
+        }
+
+        &:active {
+          color: $orange-color;
+        }
+      }
+    }
   }
 
   &__info {
@@ -418,6 +507,9 @@ body {
             line-height: 24px;
           }
           &-lg {
+            animation-duration: 3s;
+            animation-delay: 3s;
+            animation-iteration-count: infinite;
             color: #000000;
             font-size: 34px;
             font-weight: 900;
@@ -448,6 +540,10 @@ body {
             border: 2px solid $green-color;
             @include ease;
           }
+
+          // &:invalid {
+          //   border: 2px solid red;
+          // }
         }
 
         &-tel {
