--- a/src/scss/_mobile.scss
+++ b/src/scss/_mobile.scss
@@ -232,6 +232,7 @@
         .block__item {
           width: 300px;
           padding: 70px 10px 30px 10px;
+          margin-bottom: 65px;
         }
         .block__item::after {
           left: 100px;
